# movie_theater

./: .gitignore  .pre-commit-config.yaml  justfile  movie_theater.drawio  pyproject.toml
src/movie/: __init__.py  default_settings.py  entry.py  services.py
src/movie/domain/: application.py  events.py  model.py  models.py  repos.py  system.py
src/movie/infrastructure/: entity.py  event.py  exceptions.py  persistence_subscriber.py  pubsub.py  store.py
src/movie/scripts/: populate.py  replay.py
src/movie/slices/: add_movie.py  add_showing.py  now_playing.py  reserve_ticket.py
src/movie/slices/add_movie/: command.py
src/movie/slices/admin_available_movies/: application.py  models.py
src/movie/slices/giveaway/: model.py  view.py
src/movie/slices/giveaway/templates/: eligible.html
src/movie/slices/reserve_ticket/: __init__.py  view.py
src/movie/slices/reserve_ticket/templates/: thank_you.html
src/movie/slices/scan_ticket/: model.py  view.py
src/movie/slices/scan_ticket/templates/: scan_ticket.html
src/movie/slices/showing_detail/: model.py  view.py
src/movie/slices/showing_detail/templates/: _seat.html  showing_detail.html
src/movie/slices/view_now_playing/: view.py
src/movie/slices/view_now_playing/templates/: now_playing.html
src/movie/web/: entry.py
src/movie/web/static/: package-lock.json  tailwind.config.js
src/movie/web/static/_build/css/: init.css
src/movie/web/static/css/: app.css
src/movie/web/templates/: base.html
tests/: conftest.py  factories.py  test_now_playing.py  test_showing_detail_projector.py  testing.toml
tests/add_movie/: test_add_movie.py  test_admin_available_movies.py
tests/add_showing/: test_add_showing.py
