[project]
name = "movie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris May", email = "chris@may.org" }
]
requires-python = ">=3.12"
dependencies = [
    "eventsourcing>=9.3.5",
    "quart>=0.20.0",
]

[project.scripts]
movie = "movie:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
