[project]
name = "movie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris May", email = "chris@may.org" }
]
requires-python = ">=3.12"
dependencies = [
    "flask-swagger>=0.2.14",
    "quart>=0.19.0",
    "pydantic>=2.11.4",
    "sqlalchemy>=2.0.40",
    "svcs>=25.1.0",
    "uvicorn[standard]>=0.34.2",
    "quart-flask-patch>=0.3.0",
    'datastar-py'
]

[tool.uv.sources]
datastar-py = { git = "https://github.com/starfederation/datastar", subdirectory = "sdk/python" }

[project.scripts]
movie = "movie.web:entry"
populate = 'movie.scripts.populate:go'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "polyfactory>=2.21.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]


[tool.pytest.ini_options]
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = 'function'
addopts = '--strict-markers --strict-config'
xfail_strict = true
markers = [
    'network: requires a network connection',
]




[tool.ruff]
fix = true
line-length = 120

[tool.ruff.lint]
select = ['ALL']
ignore = ['D211', 'D212', 'COM812', 'ISC001', 'Q003', 'Q000', 'Q', 'D', 'C408', 'ANN', 'FA', 'PERF203', 'DTZ001']
unfixable = ['B']

[tool.ruff.lint.per-file-ignores]
# Ignore 'E402' (import violations) in all '__init__.py' files, and in select subdirectories.
'__init__.py' = ['E402']
'**/{tests,docs,tools}/*' = ['E402', 'E501', 'S101']
'test_*.py' = ['E402', 'E501', 'S101']

[tool.ruff.format]
quote-style = 'preserve'

[tool.coverage.run]
branch = true
source = ['api', 'data_processing', 'front_end', 'shared']
command_line = '-m pytest tests'

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if __name__ == .__main__.:',
    '@(abc\\.)?abstractmethod',
]
